Création section Slider, Categories, Produits, Newsletter, footer
Correction du Router du fichier App.jsx 
Ajout du fichier Accueil.jsx

--- a/src/Components/Navbar/Navbar.scss
+++ b/src/Components/Navbar/Navbar.scss
@@ -48,6 +48,10 @@
     color: white;
 }
 
+input.Search_Navbar:focus {     
+    outline:  none;
+}
+
 #MenuItem_Navbar {
     @include flexbox-center;
     margin-left: 20px;
