Ajout d'une page + modification Data + changement d'icon Pinterest via FontAwesome Icons

--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -75,6 +75,11 @@
     color: #1da1f2;
 }
 
+.logo_Pinterest {
+    font-size: 30px;
+    color: #b7081b;
+}
+
 .Center_Footer {
     flex: 1;
     padding: 20px;
