Creation d'une page d'un produit

--- a/src/Sass/Index.scss
+++ b/src/Sass/Index.scss
@@ -11,6 +11,8 @@
 @import '../Components/Newsletter/Newsletter.scss';
 @import '../Components/Footer/Footer.scss';
 
+@import '../Pages/Product/Canne_du_muet.scss';
+
 
 * {
     box-sizing: border-box;
